--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,7 @@ $footerColor:#0F2D4A;
 @font-face {
     font-family: 'Sofia Sans';
     font-display: swap;
-    src: url(../CSS/SofiaSans.ttf);
+    src: url(./SofiaSans.ttf);
     font-weight: bold;
     font-style: normal;
 }
