--- a/scss/_main-heder.scss
+++ b/scss/_main-heder.scss
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: 'Sofia Sans';
+    font-display: swap;
+    src: url(./SofiaSans.ttf);
+    font-weight: bold;
+    font-style: normal;
+}
+
+
 header {
     display: flex;
     align-items: flex-start;
