--- a/scss/_main-heder.scss
+++ b/scss/_main-heder.scss
@@ -14,11 +14,11 @@ header {
         column-gap: 10px;
         margin-right: 60px;
 
-        &.logo img {
+        & .logo img {
             width: 50px;
         }
 
-        .logo-title h2 {
+        & .logo-title h2 {
             font-family: 'Sofia Sans';
             font-style: normal;
             font-weight: 400;
@@ -28,7 +28,7 @@ header {
             text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         }
 
-        .logo-title p {
+        & .logo-title p {
             font-family: 'Sofia Sans';
             font-style: normal;
             font-weight: 400;
