--- a/scss/style.css
+++ b/scss/style.css
@@ -6,7 +6,7 @@
 @font-face {
   font-family: "Sofia Sans";
   font-display: swap;
-  src: url(../CSS/SofiaSans.ttf);
+  src: url(./SofiaSans.ttf);
   font-weight: bold;
   font-style: normal;
 }
